--- a/newproject/package.json
+++ b/newproject/package.json
@@ -13,6 +13,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "express": "^4.16.2",
     "json-server": "^0.12.1",
     "vue": "^2.5.2",
     "vue-resource": "^1.3.5",
