--- a/newproject/package.json
+++ b/newproject/package.json
@@ -16,6 +16,7 @@
     "express": "^4.16.2",
     "json-server": "^0.12.1",
     "vue": "^2.5.2",
+    "vue-datepicker": "^1.3.0",
     "vue-resource": "^1.3.5",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
